<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bck"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="#1f000000"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/welcome" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_edittext"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="text" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/rounded_edittext"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:background="#09000000"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="35dp"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:background="#09000000"
                    android:text="@string/register" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>